282: WIP setting up modular spacing variables; modular-margin mixins will need to be fix; note: modular spacing does NOT use Bourbon modular-scale

--- a/core/css/decanter.css
+++ b/core/css/decanter.css
@@ -345,22 +345,22 @@ template {
         margin-top: 0;
         margin-bottom: 0; } }
   .flex-container--row-gap > * {
-    margin: 0 0 32px; }
-    @media only screen and (min-width: 1500px) {
+    margin: 0 0 20px; }
+    @media only screen and (min-width: 576px) {
       .flex-container--row-gap > * {
-        margin: 0 0 38px; } }
-    @media only screen and (min-width: 1200px) {
+        margin: 0 0 20px; } }
+    @media only screen and (min-width: 768px) {
       .flex-container--row-gap > * {
-        margin: 0 0 36px; } }
+        margin: 0 0 20px; } }
     @media only screen and (min-width: 992px) {
       .flex-container--row-gap > * {
         margin: 0 0 36px; } }
-    @media only screen and (min-width: 768px) {
+    @media only screen and (min-width: 1200px) {
       .flex-container--row-gap > * {
-        margin: 0 0 36px; } }
-    @media only screen and (min-width: 576px) {
+        margin: 0 0 40px; } }
+    @media only screen and (min-width: 1500px) {
       .flex-container--row-gap > * {
-        margin: 0 0 32px; } }
+        margin: 0 0 48px; } }
 
 .flex-auto, .flex-xs-1-of-12,
 .flex-1-of-12, .flex-xs-2-of-12,
@@ -6704,47 +6704,32 @@ button,
     .su-card > img {
       display: none; } }
 
-.su-card__contents {
-  margin: 32px; }
-  @media only screen and (min-width: 1500px) {
-    .su-card__contents {
-      margin: 38px; } }
-  @media only screen and (min-width: 1200px) {
-    .su-card__contents {
-      margin: 36px; } }
-  @media only screen and (min-width: 992px) {
-    .su-card__contents {
-      margin: 36px; } }
+.su-card__contents *:last-child {
+  margin-bottom: 0; }
+
+.su-card__contents > h5 {
+  margin-top: 0;
+  margin-bottom: 11px;
+  font-size: 13px;
+  font-weight: bold;
+  line-height: 17px;
+  text-transform: uppercase; }
   @media only screen and (min-width: 768px) {
-    .su-card__contents {
-      margin: 36px; } }
-  @media only screen and (min-width: 576px) {
-    .su-card__contents {
-      margin: 32px; } }
-  .su-card__contents *:last-child {
-    margin-bottom: 0; }
-  .su-card__contents > h5 {
-    margin-top: 0;
-    margin-bottom: 11px;
-    font-size: 13px;
-    font-weight: bold;
-    line-height: 17px;
-    text-transform: uppercase; }
-    @media only screen and (min-width: 768px) {
-      .su-card__contents > h5 {
-        margin-bottom: 12px; } }
-    @media only screen and (min-width: 1200px) {
-      .su-card__contents > h5 {
-        margin-bottom: 13px; } }
-  .su-card__contents > h3 {
-    margin-top: 0;
-    margin-bottom: 18px;
-    font-size: 25px;
-    font-weight: bold;
-    line-height: 31px; }
-    @media only screen and (min-width: 1200px) {
-      .su-card__contents > h3 {
-        margin-bottom: 19px; } }
+    .su-card__contents > h5 {
+      margin-bottom: 12px; } }
+  @media only screen and (min-width: 1200px) {
+    .su-card__contents > h5 {
+      margin-bottom: 13px; } }
+
+.su-card__contents > h3 {
+  margin-top: 0;
+  margin-bottom: 18px;
+  font-size: 25px;
+  font-weight: bold;
+  line-height: 31px; }
+  @media only screen and (min-width: 1200px) {
+    .su-card__contents > h3 {
+      margin-bottom: 19px; } }
 
 .su-card__button {
   text-align: center; }
@@ -6879,29 +6864,6 @@ button,
         .su-card--horizontal > * {
           margin-top: 0;
           margin-bottom: 0; } } }
-  .su-card--horizontal > img,
-  .su-card--horizontal .su-card__contents {
-    margin: 32px; }
-    @media only screen and (min-width: 1500px) {
-      .su-card--horizontal > img,
-      .su-card--horizontal .su-card__contents {
-        margin: 38px; } }
-    @media only screen and (min-width: 1200px) {
-      .su-card--horizontal > img,
-      .su-card--horizontal .su-card__contents {
-        margin: 36px; } }
-    @media only screen and (min-width: 992px) {
-      .su-card--horizontal > img,
-      .su-card--horizontal .su-card__contents {
-        margin: 36px; } }
-    @media only screen and (min-width: 768px) {
-      .su-card--horizontal > img,
-      .su-card--horizontal .su-card__contents {
-        margin: 36px; } }
-    @media only screen and (min-width: 576px) {
-      .su-card--horizontal > img,
-      .su-card--horizontal .su-card__contents {
-        margin: 32px; } }
   .su-card--horizontal img {
     -ms-grid-row: 1;
     -ms-grid-column: 1; }
