--- a/core/scss/utilities/mixins/modular-scale/_modular-margin-horizontal.scss
+++ b/core/scss/utilities/mixins/modular-scale/_modular-margin-horizontal.scss
@@ -3,31 +3,30 @@
 //
 // @modular-margin-horizontal
 //
-// A modular margin mixin for default spacing around an element.
+// A mixin for adding left/right margins around an element using the modular spacing system.
 //
 // Style guide: Mixins.Modular.modular-margin-horizontal
 //
-@mixin modular-margin-horizontal($scale: 1) {
+@mixin modular-margin-horizontal($scale: 0) {
 
   @include grid-media('2xl') {
-    @include margin(0 map-get($modular-spacing, '2xl') * $scale);
+
   }
 
   @include grid-media('xl') {
-    @include margin(0 map-get($modular-spacing, 'xl') * $scale);
+
   }
 
   @include grid-media('lg') {
-    @include margin(0 map-get($modular-spacing, 'lg') * $scale);
+
   }
 
   @include grid-media('md') {
-    @include margin(0 map-get($modular-spacing, 'md') * $scale);
+
   }
 
   @include grid-media('sm') {
-    @include margin(0 map-get($modular-spacing, 'sm') * $scale);
+
   }
 
-  @include margin(0 map-get($modular-spacing, 'xs') * $scale);
 }
